# server

./: .env.template  .gitignore  .pre-commit-config.yaml  README.rst  config.toml  pyproject.toml  requirements.txt  server.service
database/: schema.sql
src/: config.py  db.py  main.py  meson_cross_file  queries.py  typem.py
src/server/: config.py  db.py  graph.py  main.py  queries.py  serverm.py  typem.py  utils.py
src/server/templates/: domotik.html
