[project]
name = "server"
dynamic = ["version"]
description = "This is the home automation server. It enables to draw graphs and query the database."
authors = [{ name = "Franck Barbenoire", email = "fbarbenoire@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.12.14",
    "aiohttp-cors==0.8.1",
    "aiohttp-jinja2==1.6",
    "aiosqlite==0.21.0",
    "matplotlib==3.10.3",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "qbstyles==0.1.4"
]
# license = "GPL-3.0-or-later"
keywords = ["home automation", "server"]

[project.urls]
Homepage = "https://github.com/domotik-or/server"

[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
server = "server.main:main"

[tool.mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
